@@ -98,6 +98,12 @@ class CSort extends CComponent
 	 * and the corresponding sort direction. Defaults to array('-','.').
 	 */
 	public $separators=array('-','.');
+	/**
+	 * @var array the additional GET parameters (name=>value) that should be used when generating pagination URLs.
+	 * Defaults to null, meaning using the currently available GET parameters.
+	 * @since 1.0.9
+	 */
+	public $params;
 
 	private $_directions;
 
@@ -251,7 +257,7 @@ class CSort extends CComponent
 				$attribute=$this->attributes[$attribute];
 			$sorts[]=$descending ? $attribute.$this->separators[1].'desc' : $attribute;
 		}
-		$params=$_GET;
+		$params=$this->params===null ? $_GET : $this->params;
 		$params[$this->sortVar]=implode($this->separators[0],$sorts);
 		return $controller->createUrl($this->route,$params);
 	}
